--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,6 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
 			    http://maven.apache.org/maven-v4_0_0.xsd">
 	<groupId>com.example.maven_2</groupId>
-	<artifactId>flutter_debug-1.0</artifactId>
+	<artifactId>flutter_debug_test</artifactId>
 	<version>1.0</version>
 </project>
